Moved Seed script contents to Flori_seed
Still need to clean it up and make it more Flori VR ready. There is also a null reference error on line 98 which I need to fix.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ sysinfo.txt
 *.apk
 *.unitypackage
 Assets/Scripts/VRTK_WateringCan.cs
+Assets/Deprecated/Prefabs/Flowers/Sunflower.prefab
+Assets/Deprecated/_Scenes/etc.meta
+Assets/Deprecated/Prefabs/Flowers/Sunflower.prefab
+Assets/Deprecated/Prefabs/Flowers/Sunflower.prefab
