Retrieved chickens back
My chickens were gone when i pulled, had to reset hard to go back to my commit about the chickens. Hopefully they are back now.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ Assets/Deprecated/Prefabs/Flowers/Sunflower.prefab
 Assets/Deprecated/_Scenes/etc.meta
 Assets/Deprecated/Prefabs/Flowers/Sunflower.prefab
 Assets/Deprecated/Prefabs/Flowers/Sunflower.prefab
+Assets/Deprecated.meta
+Assets/PrimitivePlus/Resources.meta
+Assets/PrimitivePlus/Resources.meta
